--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.bigjeon.grumbling.MainActivity">
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/App_Logo"
-        android:layout_alignParentTop="true"
-        android:layout_centerInParent="true"
-        android:layout_marginTop="50dp"
-        android:layout_gravity="center"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/common_google_signin_btn_icon_dark_focused">
-    </de.hdodenhof.circleimageview.CircleImageView>
-
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/Main_Activity_Sign_In_Btn"
-        android:layout_alignParentBottom="true"
+        android:textSize="30dp"
         android:layout_centerInParent="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="50dp"
+        android:text="그렁이">
+    </TextView>
+
+    <ImageView
+        android:id="@+id/Loading_GIF"
+        android:layout_alignParentBottom="true"
         android:layout_marginBottom="50dp"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content">
-    </com.google.android.gms.common.SignInButton>
+        android:layout_centerInParent="true"
+        android:layout_width="150dp"
+        android:layout_height="20dp">
+    </ImageView>
 </RelativeLayout>
