--- a/app/src/main/res/layout/activity_app_main.xml
+++ b/app/src/main/res/layout/activity_app_main.xml
@@ -111,7 +111,23 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/Google_AdMob"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"></FrameLayout>
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+        <fragment
+            android:name="com.bigjeon.grumbling.fragments.Post_View_Fragment"
+            android:id="@+id/App_Main_Fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </fragment>
+    </FrameLayout>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/App_Main_Write_Post_Start_Floationg_Btn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:layout_constraintBottom_toTopOf="@id/Google_AdMob"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp">
+    </com.google.android.material.floatingactionbutton.FloatingActionButton>
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
