--- a/app/src/main/res/layout/dialog_posting.xml
+++ b/app/src/main/res/layout/dialog_posting.xml
@@ -1,21 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_marginBottom="5dp"
+    android:background="@color/white"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <data class=".Post_Dialog">
-        <variable
-            name="Dialog_Posting"
-            type="com.bigjeon.grumbling.dialogs.Post_Dialog" />
-    </data>
-    <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_marginBottom="5dp"
-        android:background="@color/white"
-        android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="500dp">
+    android:layout_height="500dp">
 
         <RelativeLayout
             android:layout_weight="2"
@@ -74,8 +65,8 @@
             </FrameLayout>
             <TextView
                 android:id="@+id/Dialog_Posting_Content"
-                android:hint="나는 가끔 눈물을 흘린다."
                 android:background="#50000000"
+                android:hint="글을 작성해 주세요."
                 android:layout_centerInParent="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
@@ -88,15 +79,17 @@
             android:layout_height="0dp">
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/Dialog_Posting_Set_Img"
+                android:layout_marginLeft="10dp"
+                android:layout_alignParentLeft="true"
                 android:src="@drawable/ic_baseline_insert_photo_24"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
             </de.hdodenhof.circleimageview.CircleImageView>
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/Dialog_Posting_Set_Text"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="10dp"
                 android:layout_toRightOf="@+id/Dialog_Posting_Set_Img"
-                android:src="@drawable/ic_baseline_filter_alt_24"
+                android:src="@drawable/ic_baseline_text_format_24"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
             </de.hdodenhof.circleimageview.CircleImageView>
@@ -108,10 +101,62 @@
                 android:background="@android:color/transparent"
                 android:layout_marginRight="10dp"
                 android:layout_alignParentRight="true"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content">
+                android:layout_width="wrap_content"
+                android:layout_height="35dp">
             </Button>
+            <LinearLayout
+                android:layout_below="@id/Dialog_Posting_Set_Text"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <RelativeLayout
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp">
+                    <TextView
+                        android:id="@+id/Dialog_Posting_Content_Text_Size"
+                        android:textColor="@color/black"
+                        android:text="글자 크기"
+                        android:layout_marginLeft="10dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+                    </TextView>
+                    <SeekBar
+                        android:id="@+id/Dialog_Posting_Content_Text_Size_SeekBar"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:max="15"
+                        android:min="30"
+                        android:layout_toRightOf="@id/Dialog_Posting_Content_Text_Size"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+                    </SeekBar>
+                </RelativeLayout>
+                <RelativeLayout
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp">
+                    <TextView
+                        android:id="@+id/Dialog_Posting_Content_Text_Color"
+                        android:text="글자 색상"
+                        android:textColor="@color/black"
+                        android:gravity="center"
+                        android:layout_marginLeft="10dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent">
+                    </TextView>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/Dialog_Posting_Content_Text_Color_Rcv"
+                        android:layout_toRightOf="@+id/Dialog_Posting_Content_Text_Color"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="20dp"
+                        android:layout_marginLeft="20dp"
+                        tools:listitem="@layout/color_item">
+                    </androidx.recyclerview.widget.RecyclerView>
+                </RelativeLayout>
+            </LinearLayout>
         </RelativeLayout>
     </LinearLayout>
-
-</layout>
