Posting_Code_Complete

--- a/app/src/main/res/layout/db_gif_img_item.xml
+++ b/app/src/main/res/layout/db_gif_img_item.xml
@@ -10,7 +10,7 @@
         android:id="@+id/Gif_Circle_IMV"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@drawable/multi_colred_motion">
+        android:background="@raw/multi_colred_motion">
     </de.hdodenhof.circleimageview.CircleImageView>
 
     <TextView
