--- a/app/src/main/res/layout/fragment_post_view.xml
+++ b/app/src/main/res/layout/fragment_post_view.xml
@@ -13,7 +13,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.bigjeon.grumbling.fragments.Post_View_Fragment">
-
+    <RelativeLayout
+        android:background="@color/white"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/Post_Swipe_Refresh_Layout"
         android:layout_width="match_parent"
@@ -25,6 +28,16 @@
             tools:listitem="@layout/post_view_item">
         </androidx.recyclerview.widget.RecyclerView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/Post_Write_Post_Start_CircleImgBtn"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/ic_baseline_create_24"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp">
+    </com.google.android.material.floatingactionbutton.FloatingActionButton>
+    </RelativeLayout>
 </FrameLayout>
 </layout>
