--- a/app/src/main/res/layout/fragment_post_view.xml
+++ b/app/src/main/res/layout/fragment_post_view.xml
@@ -28,16 +28,15 @@
             tools:listitem="@layout/post_view_item">
         </androidx.recyclerview.widget.RecyclerView>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/Post_Write_Post_Start_CircleImgBtn"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/Post_Write_Post_Start_CircleImg"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:src="@drawable/ic_baseline_create_24"
+        android:background="@drawable/ic_baseline_post_add_24"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="10dp">
-    </com.google.android.material.floatingactionbutton.FloatingActionButton>
-    </RelativeLayout>
+    </de.hdodenhof.circleimageview.CircleImageView></RelativeLayout>
 </FrameLayout>
 </layout>
