--- a/app/src/main/res/layout/post_view_item.xml
+++ b/app/src/main/res/layout/post_view_item.xml
@@ -6,49 +6,10 @@
     android:background="@color/white"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="300dp">
-
-    <RelativeLayout
-        android:layout_weight="2"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@drawable/post_view_title_under_edge_1dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/Post_View_User_Img"
-            android:src="@mipmap/ic_launcher"
-            android:layout_width="30dp"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            android:layout_alignParentLeft="true"
-            android:layout_marginLeft="5dp">
-        </de.hdodenhof.circleimageview.CircleImageView>
-        <TextView
-            android:id="@+id/Post_View_User_Name"
-            android:text="User_Name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@+id/Post_View_User_Img"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="5dp">
-        </TextView>
-
-        <ImageView
-            android:id="@+id/Post_View_Declaration_Btn"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="10dp"
-            android:layout_marginRight="7dp"
-            android:layout_marginBottom="10dp"
-            android:background="@android:drawable/ic_menu_info_details"></ImageView>
-    </RelativeLayout>
+    android:layout_height="250dp">
     <RelativeLayout
         android:id="@+id/Post_View_Content_Container"
-        android:layout_weight="8"
+        android:layout_weight="7"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -64,6 +25,25 @@
                 android:layout_height="match_parent">
             </ImageView>
         </FrameLayout>
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/Post_View_User_Img"
+            android:src="@mipmap/ic_launcher"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginLeft="5dp">
+        </de.hdodenhof.circleimageview.CircleImageView>
+        <TextView
+            android:id="@+id/Post_View_User_Name"
+            android:text="User_Name"
+            android:textSize="10dp"
+            android:textColor="@color/black"
+            android:layout_toRightOf="@+id/Post_View_User_Img"
+            android:layout_marginTop="15dp"
+            android:layout_marginLeft="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </TextView>
         <TextView
             android:id="@+id/Post_View_Content"
             android:text="나는 가끔 눈물을 흘린다."
