--- a/app/src/main/res/layout/activity_google_login.xml
+++ b/app/src/main/res/layout/activity_google_login.xml
@@ -20,7 +20,7 @@ xmlns:tools="http://schemas.android.com/tools">
         android:layout_centerInParent="true"
         android:layout_marginBottom="100dp"
         android:layout_width="200dp"
-        android:layout_height="35dp">
+        android:layout_height="wrap_content">
     </com.google.android.gms.common.SignInButton>
 </RelativeLayout>
 </layout>
