--- a/app/src/main/res/layout/activity_app_main.xml
+++ b/app/src/main/res/layout/activity_app_main.xml
@@ -64,45 +64,35 @@
         app:layout_constraintTop_toBottomOf="@+id/Title">
 
         <Button
-            android:id="@+id/App_Main_All_Post_Btn"
+            android:id="@+id/App_Main_TimeLine_Btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:text="타임 피드"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:textSize="10dp">
+        </Button>
+
+        <Button
+            android:id="@+id/App_Main_Post_Btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="게시글"
             android:textStyle="bold"
-            android:backgroundTint="@color/white"
+            android:background="@android:color/transparent"
             android:textColor="@color/black"
             android:textSize="10dp"></Button>
 
         <Button
-            android:id="@+id/App_Main_Firend_Post_Btn"
+            android:id="@+id/App_Main_Setting_Btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:backgroundTint="@color/white"
-            android:text="Fired_Post"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:textSize="10dp"></Button>
-
-        <Button
-            android:id="@+id/App_Main_My_Post_List_Btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="@color/white"
-            android:text="내가 쓴글"
-            android:textStyle="bold"
-            android:textColor="@color/black"
-            android:textSize="10dp"></Button>
-
-        <Button
-            android:id="@+id/App_Main_My_Set_Btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:backgroundTint="@color/white"
-            android:text="Set"
+            android:background="@android:color/transparent"
+            android:text="설정"
             android:textStyle="bold"
             android:textColor="@color/black"
             android:textSize="10dp"></Button>
@@ -121,12 +111,13 @@
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/Google_AdMob"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout">
-        <fragment
-            android:name="com.bigjeon.grumbling.fragments.Post_View_Fragment"
-            android:id="@+id/App_Main_Fragment"
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/App_Main_ViewPager2"
+            android:clipToPadding="false"
+            android:clipChildren="false"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-        </fragment>
+        </androidx.viewpager2.widget.ViewPager2>
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
