--- a/app/src/main/res/layout/post_view_item.xml
+++ b/app/src/main/res/layout/post_view_item.xml
@@ -2,8 +2,8 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginBottom="5dp"
-    android:background="@color/white"
+    android:background="@color/Gray"
+    android:layout_marginBottom="2dp"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="300dp">
@@ -21,6 +21,7 @@
             <ImageView
                 android:id="@+id/Post_View_Background"
                 android:scaleType="fitXY"
+                android:background="@color/white"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
             </ImageView>
